removed PermGen options for JVM for running on JDK 9