@@ -134,8 +134,6 @@
                             <jvmArg>-Xms512m</jvmArg>
                             <jvmArg>-Xmx512m</jvmArg>
                             <jvmArg>-Xss1m</jvmArg>
-                            <jvmArg>-XX:PermSize=128m</jvmArg>
-                            <jvmArg>-XX:MaxPermSize=128m</jvmArg>
                             <jvmArg>-XX:+TieredCompilation</jvmArg>
                         </jvmArgs>
                     </configuration>
@@ -165,7 +163,7 @@
                         <includes>
                             <include>**/*Spec.class</include>
                         </includes>
-                        <argLine>-server -Xms4096m -Xmx4096m -XX:NewSize=3584m -Xss228k -XX:PermSize=64m -XX:MaxPermSize=64m -XX:+TieredCompilation -XX:+UseG1GC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</argLine>
+                        <argLine>-server -Xms4096m -Xmx4096m -XX:NewSize=3584m -Xss228k -XX:+TieredCompilation -XX:+UseG1GC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</argLine>
                     </configuration>
                 </plugin>
             </plugins>
@@ -187,7 +185,7 @@
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-plugin</artifactId>
                             <configuration>
-                                <argLine>-server -Xms2560m -Xmx2560m -XX:NewSize=2240m -Xss228k -XX:PermSize=32m -XX:MaxPermSize=32m -XX:+TieredCompilation -XX:+UseG1GC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</argLine>
+                                <argLine>-server -Xms2560m -Xmx2560m -XX:NewSize=2240m -Xss228k -XX:+TieredCompilation -XX:+UseG1GC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</argLine>
                                 <useFile>false</useFile>
                             </configuration>
                         </plugin>
